# bot_meshme_rh

./: README.md  pyproject.toml
config/: config.yaml
src/: main.py  meshme_processo_rh.py
src/utils/: crypt_aes.py  utils.py
temp/: planilha_processo_rh.xlsx
