[tool.poetry]
name = "rpa-meshme"
version = "0.1.0"
description = ""
authors = ["SouzaThales <t.douglas.souza@gmail.com>"]
readme = "README.md"
packages = [{include = "rpa_meshme"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
